# opengl_3d

./: .gitignore  CMakeLists.txt  Makefile  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/: includes.h  model.h  renderObjects.h  shaders.h
shaders/: fragment.glsl
src/: glad.c  main.c  model.c  renderObjects.c  shaders.c
